# ai-privacy-gateway

./: .bandit  .coveragerc  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.enterprise  Dockerfile.pro  LICENSE  PrivacyGateway.spec  README.md  README_CN.md  ac_engine.py  alert_manager.py  alerts.py  audit.py  audit_log.py  build.bat  build.sh  build_chain.py  config.py  database.py  decay_manager.py  deploy_license_server.bat  deploy_license_server.sh  docker-compose.enterprise.yml  docker-compose.pro.yml  docker-compose.yml  gateway_core.py  index.html  install.bat  install.sh  integrity_checker.py  keywords.json  license.py  license_client.py  load_balancer.py  logging_config.py  (+21 more)
.github/: PULL_REQUEST_TEMPLATE.md
assets/: index.B7ilBJP1.css  index.BzK4WUu5.css
deployment_examples/: docker_sidecar.yml  forward_proxy.md  nginx_upstream.conf
docs/: community-promotion.md  deploy.md  gateway-production-gaps.md  grpc-support-evaluation.md  implementation-plan.md  index.html  launch-plan.md  openapi-integration.md  production-readiness-audit-2026-06-26.md  website-redesign-plan.md
download/: index.html
installer/: generate_icon.py  setup.iss
license_server/: Dockerfile  email_sender.py  license_store.py  main.py  requirements.txt
routers/: __init__.py  admin.py  api.py  auth.py  dependencies.py  proxy.py  setup.py
rust_src/: build.bat  build.sh
rust_src/integrity_check/: Cargo.toml  pyproject.toml
rust_src/integrity_check/src/: lib.rs
sdk/: README.md
static/: admin.html  admin_pro.html  index.html  login.html  (+1 more)
(+254 files in other folders)
