[package]
name = "integrity_check"
version = "2.0.0"
edition = "2021"
authors = ["AI Privacy Gateway Team"]
description = "Runtime integrity checking module for AI Privacy Gateway"

[lib]
name = "integrity_check"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true