[package]
name = "integrity_check"
version = "0.1.0"
edition = "2021"

[lib]
name = "integrity_check"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3", "abi3-py38"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = true
